fixed h2 overflow on home page

--- a/public/styles/_home.scss
+++ b/public/styles/_home.scss
@@ -13,6 +13,7 @@
   // background-color: yellow;
   // min-height: 100vh;
   padding-top: 0px;
+  padding-bottom: 100px;
   position: relative;
   top: 0px;
   display: grid;
@@ -91,6 +92,10 @@
         // transform: translateX(-100%);
         // opacity: 0;
         transition: all 0.8s;
+        text-overflow: ellipsis;
+        max-width: 100%;
+        overflow: hidden;
+        white-space: nowrap;
         span {
           color: rgb(13, 211, 168);
         }
